--- a/template/navItemLogin.html
+++ b/template/navItemLogin.html
@@ -7,9 +7,9 @@
             </div>
         </a>
         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
-            <li><a class="dropdown-item" href="index.php?p=account">Profilom</a></li>
-            <li><a class="dropdown-item" href="index.php?p=account">Receptjeim</a></li>
-            <li><a class="dropdown-item" href="index.php?p=favorites">Kedvencek</a></li>
+            <li><a class="dropdown-item" href="index.php?p=account"><img class="nav-icon" src="content/nav-profil-pic.png" alt="profile icon">Profilom</a></li>
+            <li><a class="dropdown-item" href="index.php?p=account"><img class="nav-icon" src="content/nav-recipe-icon.png" alt="recept icon">Receptjeim</a></li>
+            <li><a class="dropdown-item" href="index.php?p=favorites"><img class="nav-icon" src="content/heart_icons/heart1b.png" alt="favorites">Kedvencek</a></li>
             %!ADMIN!%
             <li>
                 <hr class="dropdown-divider">
