--- a/template/navigation.html
+++ b/template/navigation.html
@@ -31,9 +31,11 @@
                         <li><a class="dropdown-item" href="index.php?p=receptek&amp;cat=Leves">Leves</a></li>
                         <li><a class="dropdown-item" href="index.php?p=receptek&amp;cat=Előétel">Előétel</a></li>
                         <li><a class="dropdown-item" href="index.php?p=receptek&amp;cat=Főétel">Főétel</a></li>
+                        <li><a class="dropdown-item" href="index.php?p=receptek&amp;cat=Tészta">Tészta</a></li>
                         <li><a class="dropdown-item" href="index.php?p=receptek&amp;cat=Köret">Köret</a></li>
+                        <li><a class="dropdown-item" href="index.php?p=receptek&amp;cat=Saláta">Saláta</a></li>
                         <li><a class="dropdown-item" href="index.php?p=receptek&amp;cat=Édesség">Édesség</a></li>
-                        <li><a class="dropdown-item" href="index.php?p=receptek&amp;cat=Vegán">Vegán</a></li>
+                        <li><a class="dropdown-item" href="index.php?p=receptek&amp;cat=Sütemény">Sütemény</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
