--- a/template/recept-datasheet.html
+++ b/template/recept-datasheet.html
@@ -15,10 +15,10 @@
             <div class="parameters my-4">
                 <ul>
                     <li>
-                        <small><span>%!IDO!%</span> perc |</small>
+                        <small><span>%!IDO!%</span>&nbsp;perc&nbsp;&nbsp;|&nbsp;</small>
                     </li>
                     <li>
-                        <small><span>%!ADAG!%</span> adag |</small>
+                        <small><span>%!ADAG!%</span>&nbsp;&nbsp;|&nbsp;</small>
                     </li>
                     <li>
                         <small>%!NEHEZSEG!%</small>
