--- a/template/receptek.html
+++ b/template/receptek.html
@@ -69,7 +69,7 @@
             </div>
         </div>
 
-        <div class="col-lg-9 col-md-8 col-sm-12 white px-5 dynamic-padding">
+        <div class="col-lg-9 col-md-8 col-sm-12 white px-5 dynamic-padding min-h-1800">
             <p class="text-center my-3">Találatok száma: <b class="primary-color">%!RESULTNUM!%</b></p>
             <!--
             <div class="order-list">
